--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,23 +10,21 @@
   %body
     %header#main-header
       %h1 Deps
-      %nav.pinned
+      %nav#main-navigation.pinned
         %ul
           %li= link_to 'blog', blogs_path, class: cp(blogs_path)
           = render '/categories/listcats'
           %li= link_to 'contact', contact_path, class: cp(contact_path)
+      - if session[:user_id]
+        %nav#admin-nav
+          %ul
+            %li= link_to 'Admin Home', admin_path, class: 'sketchco'
+            %li= link_to 'New Blog Post', new_blog_path
+            %li= link_to 'New Artwork', new_artwork_path
+            %li= link_to 'Logout', logout_path, method: :delete, class: 'logout'
     #main-content
       = yield
 
-    %nav.admin
-      %ul
-        -if not session[:user_id]
-          %li= link_to 'Login', login_path
-        - if session[:user_id]
-          %li= link_to 'New Blog', new_blog_path
-          %li= link_to 'Categories', categories_path
-          %li= link_to 'Artwork', artworks_path
-          %li= link_to 'Logout', logout_path, method: :delete 
 
   :javascript
     $('nav.pinned').pin({  minWidth: 480 })
