sc styled admin system

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -5,7 +5,7 @@ nav#admin-nav{
   box-shadow: 0 0 .25em rgba(0,0,0,.5);
   position: fixed;
   z-index: 99999;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   text-transform: lowercase;
