--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -75,3 +75,15 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   }
 }
 
+#contact-link{
+  display: block;
+  text-decoration: none;
+  color: white;
+  font-size: 75px;
+  text-shadow: 0 0 25px rgba(0,0,0,.75);
+  text-align: center;
+  transition: all .3s ease-in-out;
+  &:hover{
+    text-shadow: 0 0 10px rgba(0,0,0,.95);
+  }
+}
