--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -79,11 +79,38 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   display: block;
   text-decoration: none;
   color: white;
-  font-size: 75px;
   text-shadow: 0 0 25px rgba(0,0,0,.75);
   text-align: center;
   transition: all .3s ease-in-out;
   &:hover{
     text-shadow: 0 0 10px rgba(0,0,0,.95);
   }
+}
+
+#social-links{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 384px;
+  margin: 3em auto; 
+  li{
+    display: inline;
+    a{
+    font: 0/0 a;
+    text-shadow: none;
+    color: transparent;
+      display: block;
+      float: left;
+      width: 128px;
+      height: 128px;
+      transition: all .25s ease-in-out;
+      &:hover{
+        transform: translate(0, -5px);
+      }
+      &.facebook{  background: url('https://s3.amazonaws.com/deps1/static/Facebook-icon.png'); }
+      &.instagram{ background: url('https://s3.amazonaws.com/deps1/static/Instagram-icon.png'); }
+      &.tumblr{    background: url('https://s3.amazonaws.com/deps1/static/Tumblr-icon.png'); }
+    }
+  }
+
 }
