--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,1 +1,6 @@
-%a{ id: 'contact-link',  href: 'mailto:deps1art@gmail.com'} deps1art@gmail.com
+%a{ id: 'contact-link',  href: 'mailto:deps1art@gmail.com' } deps1art@gmail.com
+
+%ul#social-links
+  %li <a class='instagram' href='http://instagram.com/depsone'>Instagram</a>
+  %li <a class='facebook' href='http://facebook.com/depsuno'>Facebook</a>
+  %li <a class='tumblr' href='http://deps1nyc.tumblr.com/'>Tumblr</a>
