changed email addy

--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,4 +1,4 @@
-%a{ id: 'contact-link',  href: 'mailto:deps1art@gmail.com' } deps1art@gmail.com
+%a{ id: 'contact-link',  href: 'mailto:depsartnyc@gmail.com' } depsartnyc@gmail.com
 
 %ul#social-links
   %li <a class='instagram' href='http://instagram.com/depsone'>Instagram</a>
